2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_forecast.php
	 include/functions_reporting.php: Fixed graphical representation of
	 intervals in projection graphs.

2012-01-03  Vanessa Gil  <vanessa.gil@artica.es>
	* include/functions_graph.php
	  operation/netflow/nf_view.php: Graph changes.

2012-01-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php
	include/auth/mysql.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	godmode/users/user_list.php: Added to users the 
	disable/enable feature

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.data.postgreSQL.sql
	 pandoradb.postgreSQL.sql: Fixed queries in these scripts.

2012-01-02  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.oracle.sql: Added netflow tables.

2012-01-02  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/netflow/nf_view.php
	  include/functions_graph.php
	  include/functions_netflow.php: changed the way to collect netflow
	parameters.

2011-12-30  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_report_item.php
	  godmode/netflow/nf_item_list.php
	  operation/netflow/nf_view: Changed the report date and interval.

2011-12-30  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_edit.php
	  godmode/netflow/nf_item_list.php: Cascade delete filters.

2011-12-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixe module editor when the
	data configuration textarea is empty or is a module plugin

2011-12-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php: Added Netflow server information.

2011-12-22 Sancho Lerena <slerena@artica.es>

	* pandoradb_migrate_4.0.x_to_4.1.mysql.sql: Added migration 
	script for 4.1 version. Added netflow tables.
